# fast-exif-rs

./: .gitattributes  .gitignore  BENCHMARK_REPORT.md  COMPREHENSIVE_TODO.md  Cargo.toml  EXIFTOOL_REVERSE_ENGINEERING_GUIDE.md  INSTALL.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RUST_VS_PYTHON_ANALYSIS.md  TODO.txt  advanced_exiftool_compatibility_test.py  analyze_differences.py  analyze_exif_tags_detailed.py  analyze_exiftool_output.py  analyze_invalid_exif_block.py  analyze_segments  analyze_segments.rs  analyze_subsec_pattern.py  benchmark_1000_photos.py  benchmark_optimizations.py  benchmark_output.txt  benchmark_summary.md  build.sh  calculate_percentages.py  check_github_actions.py  cli_example.py  compare_exif.py  compare_exif_extraction.py  compare_field_counts.py  compare_outputs.py  comparison_report_0.5.1.md  comparison_results.json  comprehensive_analysis.py  comprehensive_benchmark.py  (+79 more)
..bfg-report/2025-09-29/21-26-47/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-09-29/21-26-53/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-09-29/21-26-55/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-09-29/21-27-31/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-09-29/21-27-31/protected-dirt/: cbecb69d-HEAD.csv
..bfg-report/2025-09-29/21-27-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-09-29/21-27-56/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/: README.md
.github/workflows/: build-and-release.yml  build-release.yml  ci.yml  integration-test.yml  pypi.yml
benchmarks/: README.md  benchmark_comprehensive_after.json  benchmark_original.json  comprehensive_benchmark.py  parallel_exif_benchmark.py  quick_benchmark.py  requirements.txt  rust_vs_python_multiprocessing.py  simple_test.py  test_benchmark.py  validation_benchmark.py  working_benchmark.py
benchmarks/v2.0/: benchmark_results.json  demonstrate_v2_features.py  focused_v2_benchmark.py  focused_v2_benchmark_results.json  large_scale_benchmark.py  large_scale_benchmark_results.json  performance_benchmark.py
cli/: README.md  __init__.py  fast_exif_cli.py
docs/: 1TO1_COMPATIBILITY_SUMMARY.md  ENHANCED_EXIF_WRITING.md  EXIFTOOL_1TO1_COMPATIBILITY_PLAN.md  EXIF_WRITING.md  FAST_EXIF_RS_V2_SUMMARY.md  ImplementationChecklist.md  LARGE_SCALE_BENCHMARK_SUMMARY.md  MULTIPROCESSING.md  PERFORMANCE.md  README.md  ROADMAP.md  V2_REAL_IMPROVEMENTS.md
docs/analysis/: EXIFTOOL_IMPLEMENTATION_PLAN.md  EXIF_WRITE_ANALYSIS.md  EXIF_WRITE_SUMMARY.md  JPEG_EXIF_WRITING_SUMMARY.md
docs/benchmarks/: ENHANCED_FORMAT_SUPPORT_SUMMARY.md  EXIF_WRITING_BENCHMARK_RESULTS.md  benchmark_exif_writing.py  format_support_test_results.json  simple_exif_benchmark.py
examples/: basic_usage.rs  benchmark.py  benchmark_ultrafast.rs  dual_path_multiprocessing_demo.py  enhanced_exif_writing_example.py  exif_writing_example.py  integration_example.rs  large_scale_exif_processing.py  multiprocessing_example.py  optimization_benchmark.rs  show_expected_output.rs  simple_usage.py  test_video_dates.rs
exiftool-rs/: Cargo.toml  README.md
exiftool-rs/src/: main.rs
python/fast_exif_reader/: __init__.py  _version.py  multiprocessing.py
python/fast_exif_reader/cli/: README.md  __init__.py  fast_exif_cli.py  requirements.txt
scripts/: analyze_exiftool.sh  build.sh  test_build.py
src/: batch_writer.rs  computed_fields.rs  enhanced_cr2_parser.rs  enhanced_dng_parser.rs  enhanced_format_detection.rs  enhanced_heif_parser.rs  enhanced_image_parser.rs  enhanced_raw_parser.rs  enhanced_video_parser.rs  exif_copier.rs  field_mapping.rs  format_detection.rs  hybrid_reader.rs  lib.rs  memory_optimization.rs  memory_optimized_reader.rs  multiprocessing.rs  types.rs  ultra_fast_jpeg_reader.rs  utils.rs  v2_reader.rs  value_formatter.rs  writer.rs
src/parsers/: adaptive_memory.rs  bmp.rs  cache.rs  gpu.rs  heif.rs  high_performance_jpeg.rs  hybrid.rs  jpeg.rs  lazy_parser.rs  maker_notes.rs  maker_notes_comprehensive.rs  maker_notes_old.rs  mkv.rs  mod.rs  optimal.rs  optimized_jpeg.rs  png.rs  raw.rs  selective.rs  simd.rs  simd_heic.rs  simd_jpeg.rs  tiff.rs  ultra_fast_jpeg.rs  ultra_seek_optimized.rs  video.rs  zero_copy.rs
tests/: test_camera_support.py  test_cli.py  test_exiftool_compatibility_comprehensive.py  test_heif_timestamps.py  test_performance.py  test_pickle.py  test_tiff_validation.py
