[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-exif-reader"
version = "0.1.0"
description = "Fast EXIF reader optimized for Canon 70D and Nikon Z50 II"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["exif", "metadata", "image", "canon", "nikon", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/dapperfu/fast-exif-rs"
Repository = "https://github.com/dapperfu/fast-exif-rs"
Documentation = "https://github.com/dapperfu/fast-exif-rs#readme"
"Bug Tracker" = "https://github.com/dapperfu/fast-exif-rs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.0",
    "psutil>=5.8",
]

[project.scripts]
fast-exif-cli = "cli.fast_exif_cli:main"

[tool.maturin]
python-source = "python"
module-name = "fast_exif_reader"
features = ["pyo3/extension-module"]
