[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-exif-reader"
dynamic = ["version"]
description = "Fast EXIF reader and writer with comprehensive multimedia support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["exif", "metadata", "image", "video", "canon", "nikon", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/dapperfu/fast-exif-rs"
Repository = "https://github.com/dapperfu/fast-exif-rs"
Documentation = "https://github.com/dapperfu/fast-exif-rs#readme"
"Bug Tracker" = "https://github.com/dapperfu/fast-exif-rs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.0",
    "pytest-cov>=4.0",
    "psutil>=5.8",
]

[project.scripts]
fast-exif-cli = "fast_exif_reader.cli.fast_exif_cli:main"

[tool.maturin]
python-source = "python"
module-name = "fast_exif_reader"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "T201", "S101", "BLE001", "EXE001"]  # Line too long, print statements, assert statements, broad exceptions, shebang issues

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "S101", "BLE001", "EXE001", "S301", "S603", "PLW1510", "COM812", "RET505", "C901", "PERF401", "PLR2004", "PLC0415", "W293", "F401", "F841", "I001", "PTH110", "PTH123", "S607"]
"examples/*" = ["T201", "BLE001", "EXE001", "S603", "PLW1510", "COM812", "PERF401", "PLR2004", "F541", "FBT001", "FBT002", "C901", "PLR0913", "PLR0912", "PLR0915", "PERF402", "PERF203", "PERF401", "I001", "PTH120", "PTH100", "PTH110", "PTH118", "PTH119", "PTH123", "B007", "FA100", "RET505", "S607"]
"cli/*" = ["T201", "S101", "BLE001", "EXE001", "S301", "S603", "PLW1510", "COM812", "RET505", "C901", "PERF401", "PLR2004", "PLC0415", "W293", "FBT001", "FBT002", "C901", "PLR0913", "PLR0912", "PLR0915", "PERF402", "PERF203", "PERF401", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "python/fast_exif_reader/_version.py"
versionfile_build = "python/fast_exif_reader/_version.py"
tag_prefix = "v"
parentdir_prefix = "fast-exif-reader-"